fix mainpage horizontal scroll

--- a/src/application/presentation/pages/MainPage/components/HookahContainer/HookahContainer.module.scss
+++ b/src/application/presentation/pages/MainPage/components/HookahContainer/HookahContainer.module.scss
@@ -13,6 +13,10 @@
   padding: 0 7.5rem;
 }
 
+.fillers {
+  overflow: hidden;
+}
+
 @media screen and (max-width: 768px) {
   .container {
     padding: 5rem 3rem;
